# GEMM

./: CMakeLists.txt  README.md  run_bench.sh
.github/workflows/: c-cpp.yml
bench/: bench_gemm_avx2_blocked.cpp  bench_gemm_avx2_openmp.cpp  bench_gemm_avx2_openmp_blocked.cpp  bench_gemm_blocked.cpp  bench_gemm_cublas.cu  bench_gemm_cuda.cu  bench_gemm_cuda_v2.cu  bench_gemm_neon.cpp  bench_gemm_openmp.cpp  bench_gemm_strassen.cpp
include/: backend_avx2_blocked.hpp  backend_avx2_openmp.hpp  backend_avx2_openmp_blocked.hpp  backend_blocked.hpp  backend_cublas.cuh  backend_cuda.cuh  backend_cuda_v2.cuh  backend_neon.hpp  backend_openmp.hpp  backend_strassen.hpp
